@@ -64,7 +64,7 @@ abstract class AbstractHibernateArrayDemoTests {
     this.sessionFactory.inStatelessSession(session -> {
       Transaction transaction = session.beginTransaction();
       try {
-        List<Integer> numbers = Arrays.asList(392, 756, 826, 840, 978);
+        List<Integer> numbers = List.of(392, 756, 826, 840, 978);
         List<Currency> currencies = session.createQuery(
                 "FROM Currency "
                         + "WHERE array_contains(:numbers, number)",
@@ -73,7 +73,7 @@ abstract class AbstractHibernateArrayDemoTests {
                 .getResultList();
         assertCurrencies(currencies);
 
-        List<String> codes = Arrays.asList("JPY", "CHF", "GBP", "USD", "EUR");
+        List<String> codes = List.of("JPY", "CHF", "GBP", "USD", "EUR");
         currencies = session.createQuery(
                 "FROM Currency "
                         + "WHERE array_contains(:codes, code)",
@@ -93,7 +93,7 @@ abstract class AbstractHibernateArrayDemoTests {
     this.sessionFactory.inStatelessSession(session -> {
       Transaction transaction = session.beginTransaction();
       try {
-        List<Integer> numbers = Arrays.asList(392, 756, 826, 840, 978);
+        List<Integer> numbers = List.of(392, 756, 826, 840, 978);
 
         CriteriaQuery<Currency> query = createCurrencyQuery(session);
         Root<Currency> root = query.from(Currency.class);
@@ -104,7 +104,7 @@ abstract class AbstractHibernateArrayDemoTests {
                 .getResultList();
         assertCurrencies(currencies);
 
-        List<String> codes = Arrays.asList("JPY", "CHF", "GBP", "USD", "EUR");
+        List<String> codes = List.of("JPY", "CHF", "GBP", "USD", "EUR");
         query = createCurrencyQuery(session);
         root = query.from(Currency.class);
         currencies = session.createQuery(
